--- a/baremetal.html
+++ b/baremetal.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=SN+Pro:200,300,400,500,600,700,800,900,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=SN+Pro:200,300,400,500,600,700,800,900,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GelMco"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GelMco" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=idJctR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=idJctR" type="text/css">
 
   
   
@@ -236,9 +236,7 @@
 			</div>
 			
 			<div class="col-12 mt-4">
-				<p class="mbr-text mb-0 mbr-fonts-style copyright align-center display-7">
-					© Copyright 2025 CyroHost - All Rights Reserved
-				</p>
+				<p class="mbr-text mb-0 mbr-fonts-style copyright align-center display-7">© 2026 CyroHost™ | All Rights Reserved.</p>
 			</div>
 		</div>
 	</div>
